--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ashraf-kabir/mern-ecommerce.git"
+    "url": "git+https://github.com/mehrozdevsinc/Mern-Blockchain_e-commerce"
   },
   "keywords": [],
   "author": "Developer",
